--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+        <fastjson.version>1.2.76</fastjson.version>
+        <druid.version>1.1.16</druid.version>
+        <hutool.version>5.5.9</hutool.version>
     </properties>
     <dependencies>
         <dependency>
@@ -49,6 +52,22 @@
             <groupId>de.gsi.chart</groupId>
             <artifactId>chartfx-chart</artifactId>
             <version>8.1.5</version>
+        </dependency>
+
+        <!--HTTP 客户端-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
 
     </dependencies>
