--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 9001
+  servlet:
+    context-path: /demo
+logging:
+  file:
+    path: ./log
+  level:
+    web: debug
+    sql: debug
