--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,28 @@ logging:
   level:
     web: debug
     sql: debug
+
+spring:
+  activemq:
+    in-memory: false
+    user: admin
+    password: admin
+#    broker-url: tcp://192.168.10.28:61616
+    broker-url: tcp://127.0.0.1:61616
+  kafka:
+    # kafka配置
+    bootstrap-servers: 127.0.0.1:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      properties:
+        group:
+          id: demo
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+
+nannar:
+  enable-mock-robot: true
